--- a/main.css
+++ b/main.css
@@ -50,6 +50,16 @@ a {
     width: 70%;
     max-width: 200px;
 }
+.center2 {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 5%;
+    width: 60%;
+    max-width: 700px;
+    max-height: 450px;
+}
+
 table{
     display: block;
     margin-left: auto;
@@ -70,8 +80,8 @@ table{
     opacity:0;
 }
 
-.myImages:hover .text {
-    opacity:0.6;
+.myImages:hover {
+    opacity:0.5;
 }
 
 /* The Modal (background) */
@@ -116,6 +126,8 @@ table{
     animation-name: zoom;
     animation-duration: 0.2s;
 }
+
+
 
 @keyframes zoom {
     from {transform:scale(0)}
