--- a/main.css
+++ b/main.css
@@ -59,6 +59,12 @@ a {
     max-width: 700px;
     max-height: 450px;
 }
+.center3 {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 30%;
+}
 
 table{
     display: block;
