--- a/main.css
+++ b/main.css
@@ -82,12 +82,11 @@ table{
     transition: 0.3s;
 }
 .text{
-    box-shadow: inset 0 0 10px #000000;
     opacity:0;
 }
 
-.myImages:hover {
-    opacity:0.5;
+.myImages:hover{
+    opacity:0.8;
 }
 
 /* The Modal (background) */
@@ -163,4 +162,40 @@ table{
     .modal-content {
         width: 100%;
     }
+}
+
+/* Parent Container */
+.content_img{
+    position: relative;
+    float: left;
+}
+
+/* Child Text Container */
+.content_img div{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    font-weight: lighter;
+    font-size: 15px;
+    margin-bottom: 4px;
+    opacity: 0;
+    padding-top: 10%;
+    vertical-align: text-top;
+    width: 100%;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.7));
+    visibility: hidden;
+    -webkit-transition: visibility 0s, opacity 0.5s linear;
+    transition: visibility 0s, opacity 0.5s linear;
+}
+
+/* Hover on Parent Container
+
+.content_img:hover{
+    cursor: pointer;
+}
+
+*/
+.content_img:hover div{
+    visibility: visible;
+    opacity: 0.8;
 }
