--- a/main.css
+++ b/main.css
@@ -88,6 +88,10 @@ table{
 .myImages:hover{
     opacity:0.8;
 }
+.myImages:hover .content_img div{
+    visibility: visible;
+    opacity: 0.8;
+}
 
 /* The Modal (background) */
 .modal {
@@ -182,7 +186,6 @@ table{
     padding-top: 10%;
     vertical-align: text-top;
     width: 100%;
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.7));
     visibility: hidden;
     -webkit-transition: visibility 0s, opacity 0.5s linear;
     transition: visibility 0s, opacity 0.5s linear;
@@ -194,8 +197,9 @@ table{
     cursor: pointer;
 }
 
-*/
+
 .content_img:hover div{
     visibility: visible;
     opacity: 0.8;
 }
++/
