--- a/main.css
+++ b/main.css
@@ -13,6 +13,7 @@ body {
     font-size: 20px;
     margin: 0;
     color: #ffffff;
+    background-color: #181818;
 }
 
 a {
@@ -83,6 +84,17 @@ table{
 }
 .text{
     opacity:0;
+}
+
+
+.footer {
+     position: center;
+     left: 0;
+     bottom: 50px;
+     width: 100%;
+     text-align: center;
+    font-family: Helvetica;
+    font-size: 12px;
 }
 
 .myImages:hover{
